fix: improved EsCollapse animation for large sections

--- a/es-bs-base/scss/_transitions.scss
+++ b/es-bs-base/scss/_transitions.scss
@@ -52,5 +52,5 @@
 
 .es-collapse-enter-to,
 .es-collapse-leave-from {
-  max-height: 1000px;
+  max-height: 3000px;
 }
